crates/graphql-schema-validation/tests/validation_errors/errors@enums_nonempty.snap
---
source: crates/graphql-schema-validation/tests/validation_tests.rs
expression: displayed
input_file: crates/graphql-schema-validation/tests/validation_errors/enums_nonempty.graphql
---
  × Syntax error:  --> 1:16
  │   |
  │ 1 | enum TestEnum {}
  │   |                ^---
  │   |
  │   = expected enum_value_definition
